# miniDB

./: .gitignore  CMakeLists.txt  Class_UML  Projeto_CBD_2016_2.cbp  Projeto_CBD_2016_2.depend  Projeto_CBD_2016_2.layout  README.md  README_bpt.md  loader.h  main.cpp  miniDB_OO.cbp  miniDB_OO.depend  miniDB_OO.layout  old_main.cpp
CSVs_de_Teste/: MOCK_DATA.csv  lista_ies.csv  polos_ead.csv
csv/: cidades.csv  gerador_csv.cpp  lista_ies.csv  mock_data.csv  nomes.csv  polos_ead.csv  r1.csv  r2.csv  r3.csv  r3.csv-e  test.csv
include/: BplusIndex.h  DenseIndex.h  HashIndex.h  HashTable.h  Index.h  LinkedList.h  bpt.h
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/: LEIA-ME.txt  tempos.txt
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_funciona/miniDB_OO/: miniDB_OO.cbp  miniDB_OO.layout
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_funciona/miniDB_OO/include/: BinFileHandler.h  BplusTree.h  Relation.h
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_funciona/miniDB_OO/src/: DenseIndex.cpp  Relation.cpp  main.cpp
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_segfault/miniDB_OO/: miniDB_OO.cbp  miniDB_OO.depend  miniDB_OO.layout
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_segfault/miniDB_OO/CSVs_de_Teste/: lista_ies.csv  test.csv
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_segfault/miniDB_OO/include/: bpt.h
miniDB_OO/CBD_Jonathan_Lucas_Marcos_02/CBD_Jonathan_Lucas_Marcos_02_segfault/miniDB_OO/src/: BinFileHandler.cpp  BplusIndex.cpp  DenseIndex.cpp  main.cpp
src/: BinFileHandler.cpp  BinFileHandler.h  BplusIndex.cpp  BplusIndex.h  DataBase.cpp  DataBase.h  DenseIndex.cpp  DenseIndex.h  HashIndex.cpp  HashIndex.h  HashTable.cpp  Header.h  Index.h  Join.cpp  Join.h  LinkedList.cpp  LinkedList.h  Makefile  Relation.cpp  Relation.h  bpt.h  main-join.cpp  main.cpp  minidb  predefined.h
src/include/: BinFileHandler.h  BplusIndex.h  BplusTree.h  DataBase.h  DenseIndex.h  HashIndex.h  HashTable.h  Header.h  Helpers.h  Index.h  Join.h  LinkedList.h  Relation.h  bpt.h
src/minidb.dSYM/Contents/: Info.plist
src/minidb.dSYM/Contents/Resources/DWARF/: minidb
src/src/: BinFileHandler.cpp  BplusIndex.cpp  BplusTree.cpp  DataBase.cpp  DenseIndex.cpp  HashIndex.cpp  HashTable.cpp  Helpers.cpp  Index.cpp  Join.cpp  LinkedList.cpp  Relation.cpp  main-join.cpp  main-query.cpp  report-join.cpp
test/: TestHashTable.cpp  TestHelpers.cpp  hello.cpp
Árvore B/adaptado/: bTree.c
